--- a/442-laser/latex/references.bib
+++ b/442-laser/latex/references.bib
@@ -1,10 +1,17 @@
-@online{Versuchsanleitung,
+@online{Versuchsanleitung402,
     title = {Versuchsbeschreibung P402: Quantelung von Energie},
-    organization = {Physikalisches Institut, Universität Bonn}, 
+    organization = {Physikalisches Institut, Universität Bonn},
     url = {https://uni-bonn.sciebo.de/s/I182Tc18OcOB1OG},
     urldate = {2025-11-04},
 }
 
+
+@online{Versuchsanleitung442,
+    title = {Versuchsbeschreibung P442: Laser},
+    organization = {Physikalisches Insitut, Universität Bonn},
+    url = {},
+    urldate = {2025-11-21},
+}
 
 @book{HakenWolf2013,
 title = {Atom- und Quantenphysik: Einführung in die experimentellen und theoretischen Grundlagen},
@@ -128,4 +135,15 @@ doiurl = {https://doi.org/10.1007/978-3-662-08266-9},
     organization = {NIST National Institute of Standards and Technology},
     date = {2025-11-11},
 url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm},
+}
+
+@book{Sigrist,
+    author = {Sigrist, Markus Werner},
+    edition = {8},
+    title = {Laser: Theorie, Typen und Anwendungen},
+    publisher = {Springer Spektrum},
+    year = {2018},
+    doiurl = {https://doi.org/10.1007/978-3-662-57515-4},
+    doi = {10.1007/978-3-662-57515-4},
+
 }
