--- a/442-laser/latex/einleitung.tex
+++ b/442-laser/latex/einleitung.tex
@@ -2,6 +2,6 @@ Laser (\textbf{L}ight \textbf{A}mplification by \textbf{S}timulated \textbf{E}mi
 sind ein fundamentaler Bestandteil vieler moderner optischer Techniken.
 Sie sind die Quelle kohärenten, (annähernd) monochromatischen Lichts im infraroten über optischen bis ultravioletten Spektralbereich
 von elektromagnetischer Strahlung, welches hohe Strahlintensitäten bei einem sehr kleinen Durchmesser \cite[1-2]{Sigrist} erreicht.
-Im durchgeführten Experiment sollte als sehr typische Form eines eines Gaslasers mit einem kontinuierlich betriebenen Strahl (\textit{continuous wave, CW}, im Gegensatz zu gepulsten Lasern)
-der Helium-Neon(HeNe)-Laser aufgebaut und das resultierende Laserlicht auf seine Wellenlänge und Polarisation untersucht werden.
-Außerdem werden die Moden des erzeugten Laserstrahls mithilfe eines externen symmetrischen (??) Resonators und einem optischen Spektralanalysator untersucht.
+Im durchgeführten Experiment wurde als sehr typische Form eines eines Gaslasers mit einem kontinuierlich betriebenen Strahl (\textit{continuous wave, CW}, im Gegensatz zu gepulsten Lasern)
+der Helium-Neon(HeNe)-Laser aufgebaut und das resultierende Laserlicht auf seine Wellenlänge und den Polarisationszustand untersucht.
+Außerdem werden die Moden des erzeugten Laserstrahls mithilfe eines externen halbsymmetrischen Resonators und einem optischen Spektralanalysator untersucht.
