--- a/442-laser/latex/aufbau.tex
+++ b/442-laser/latex/aufbau.tex
@@ -1,3 +1,21 @@
 \chapter{Aufbau des Lasers}
 
 \section{Theoretische Überlegungen}
+
+% Was ist ein Laser
+
+Der Laser, der im folgenden aufgebaut und untersucht werden soll, ist ein HeNe-Laser mit dem folgenden Termschema.
+
+\jafps{termschema.png}{Termschema des aufzubauenden HeNe-Lasers mit Laserwellenlänge $\lambda=\SI{632.8}{\nano\meter}$. Grafik entnommen aus \cite[16]{versuchsanleitung442}}{0.8}
+
+Das aktive Medium dieses Lasers ist ein Helium-Neon-Gasgemisch (Verhältnis etwa 10:1). Durch das Anschließen einer externen Hochspannungsquelle werden Heliumatome ionisiert, wobei
+die freien Elektronen beschleunigt werden und dann mit weiteren Heliumatomen stoßen. Dadurch werden diese aus dem Grundzustand in den Zustand $2^1S_0$ angeregt. Die angeregten He-Atome stoßen
+mit Neon-Atome, die so vom Grundzustand in den $3s$-Zustand angeregt werden. Dieser Zustand ist metastabil, nach zufälliger spontaner Emission und Übergang in den niedrigenergetischeren $2p$-Zustand (zufällig Photon in Richtung der späteren Laserstrahlachse) werden
+so weitere Ne-Atome im angeregten $3s$-Zustand zu stimulierter Emission gebracht. Das emittierte Photon bei jedem dieser Übergänge hat dabei die gewünschte Laserfrequenz von $\lambda=\SI{632.8}{\nano\meter}$. Da die vorhandenen Photonen
+die Emission bei anderen $3s$-Ne-Atomen induzieren, sind die so emittierten Photonen bzw. die elektromagnetische Welle kohärent und (annäherernd, siehe unten zur Linienbreite) monochromatisch.
+Die He-Ne-Gasröhre mit einem geringen Durchmesser wird zudem noch in einem Resonator aus einem planen und einem sphärischen Spiegel platziert, sodass eine Rückkoppplung des emittierten Lichts erfolgen kann.
+
+
+
+%Grundsätzlich braucht jeder Laser eine Besetzungsinversion bezüglich der Besetzungsdichten
+%von einem höheren und einem niedrigeren Energieniveau der Moleküle seines aktiven Mediums. Bei Abregung in den niedrigeren Zustan durch Emission eines Photons
