--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -20,3 +20,15 @@ Nach der Justage des Analysators erfolgt die Messung indem ein Dreiecksignal an 
 Eine kurze Überschlagsrechnung zeigt auf, dass der Modenabstand des Lasers ca. eine Größenordnung kleiner als bei dem Resonator zu erwarten ist. Somit kann davon ausgegangen werden, dass die näher aneinanderliegenden, feineren Maxima Lasermoden entsprechen und die größeren, weiter auseinanderliegenden Maxima entsprechen Analysatormoden sind.
 
 Die Länge der Laserkavität ließ sich gut Messen, mit $L = \SI{51.3(5)}{\centi\meter}$. Die Länge des Analysators hingegen ist schwer akkurat zu messen, da die genaue Position der Spiegel in den jeweiligen Bauteilen nicht eindeutig ist und die Bauteile durch ihre Größe und Form ein genaues Messen erschweren. Es ergibt sich eine Länge von $l = \SI{20(15)}{\milli\meter}$
+
+In den aufgenommenen Oszillogrammen werden die Abstände der Analysatormoden und die Abstände der Lasermoden vermessen.
+
+\jafpp{analysator_spectrum_0}{Oszillogramm des Spektrums}{analysator_spectrum_2}{zweite Messung des Selben}
+
+Aufgrund des Linearen Spannungsverlaufs an dem Piezoelement und der dazu proportionalen Längenänderung werden alle Abstände an den Indizes der Datenpunkte berechnet.
+
+Die lokalen Maxima der Kurven werden ermittelt. Der Abstand der Analysatormoden wird aus den Abständen der jeweils n-ten Maxima zueinander bestimmt. 
+
+
+
+\jafps{modespacing}{Modenabstände}{0.75}
