--- a/442-laser/latex/template.tex
+++ b/442-laser/latex/template.tex
@@ -106,6 +106,6 @@
 \makeatother
 
 \usepackage{graphicx}
-\graphicspath{{./figs/}}
+\graphicspath{{../figs/}}
 \author{Leonie Dessau \& Lena Beckmann}
 \setlength\parindent{0pt}
