--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -29,6 +29,9 @@ Aufgrund des Linearen Spannungsverlaufs an dem Piezoelement und der dazu proport
 
 Die lokalen Maxima der Kurven werden ermittelt. Der Abstand der Analysatormoden wird aus den Abständen der jeweils n-ten Maxima zueinander bestimmt. 
 
+Die Abstände der nebeneinanderliegenden Moden wird berechnet und über lineare Regression der Achsenabschnitt bestimmt und dieser als mittlerer Abstand zweier Lasermoden gesehen. Bei dieser Regression kann eine Steigung nahe Null genutzt werden um Systemische Fehler auszuschließen.
 
+Es ergibt sich eine Steigung von [WERT!] und ein Achenabschnitt von [WERT!]. 
+Aus dem Modenabstand des Resonators und dem Verhältnis zum kleineren Modenabstand (des Lasers) 
 
 \jafps{modespacing}{Modenabstände}{0.75}
