--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -31,7 +31,15 @@ Die lokalen Maxima der Kurven werden ermittelt. Der Abstand der Analysatormoden 
 
 Die Abstände der nebeneinanderliegenden Moden wird berechnet und über lineare Regression der Achsenabschnitt bestimmt und dieser als mittlerer Abstand zweier Lasermoden gesehen. Bei dieser Regression kann eine Steigung nahe Null genutzt werden um Systemische Fehler auszuschließen.
 
-Es ergibt sich eine Steigung von [WERT!] und ein Achenabschnitt von [WERT!]. 
-Aus dem Modenabstand des Resonators und dem Verhältnis zum kleineren Modenabstand (des Lasers) 
+Es ergibt sich eine Steigung von [WERT!] und ein Achenabschnitt von [WERT!]. Die Steigung ist klein genug um in guter Näherung als Null betrachtet zu werden. Es liegt kein relevanter Trend in den Daten vor. 
+Aus de mittelwert des  Analysatormodenabstands [WERT!] wird das Verhältnis der Abstände bestimmt zu $q = 2$.
+Aus dem Modenabstand des Resonators und dem Verhältnis zum kleineren Modenabstand (des Lasers) kann nun der Modenabstand der Lasermoden ermittelt werden;
+
+\begin{align}
+	q &= \frac{\nu_\text{TEM}}{\nu_\text{Laser}} = \frac{2 l}{L}\\
+	\imply \nu_\text{Laser} &= \nu_\text{TEM} \cdot q = \frac{q c}{4 l}
+\end{align}
+
+
 
 \jafps{modespacing}{Modenabstände}{0.75}
