--- a/442-laser/latex/references.bib
+++ b/442-laser/latex/references.bib
@@ -44,6 +44,16 @@ publisher = {Springer},
     publisher = {Springer},
 }
 
+@book{gerthsen,
+	author = {Gerthsen, Christian and Meschede, Dieter},
+	publisher = {Springer},
+	title = {Gerthsen Physik},
+	year = {2013},
+	doi = {10.1007/978-3-662-45977-5},
+	doiurl = {https://doi.org/10.1007/978-3-662-45977-5},
+}
+
+
 
 @book{festkoerperphysik,
     author = {Kopitzki, K. and Herzog, P.},
