--- a/442-laser/latex/main.tex
+++ b/442-laser/latex/main.tex
@@ -2,7 +2,7 @@
 
 \title{442: Laser}
 
-\date{17.\-18.11.2025}
+\date{17.-18.11.2025}
 
 
 
@@ -16,7 +16,7 @@
 
 \include{wellenlaenge.tex}
 \include{polarisation.tex}
-
+\include{waist.tex}
 \include{spektrum_analysator.tex}
 
 
