--- a/442-laser/latex/wellenlaenge.tex
+++ b/442-laser/latex/wellenlaenge.tex
@@ -2,8 +2,8 @@
 
 \section{Theoretische Überlegungen} \label{sec:theo_wellenlaenge}
 
-Um die tatsächliche Wellenlänge des Laserlichts zu bestimmen, eignet sich ein Transmissionsgitter. Dabei wird der Laserstrahl genau parallel zur Gitternormalen
-auf ein Reflexionsgitter mit Spaltabstand d.h. Gitterkonstante $g$ eingestrahlt (Fall normalen Einfalls). Aus den Maxima des resultierenden Interferezmusters auf
+Um die tatsächliche Wellenlänge des Laserlichts zu bestimmen, eignet sich ein Gitter. Dabei wird der Laserstrahl genau parallel zur Gitternormalen
+auf ein Reflexions- oder Transmissionsgitter mit Spaltabstand d.h. Gitterkonstante $g$ eingestrahlt (Fall normalen Einfalls). Aus den Maxima des resultierenden Interferezmusters auf
 einem Schirm kann mithilfe der Bedingung für den Gangunterschied für konstruktive Interferenz $\delta = n \lambda$ mit $\lambda$ als Wellenlänge des Lasers die Gittergleichung aufgestellt werden:
 \begin{align}
 	\label{eq:gitter}
