--- a/442-laser/latex/polarisation.tex
+++ b/442-laser/latex/polarisation.tex
@@ -3,10 +3,10 @@
 \section{Theoretische Überlegungen}
 
 Die Polarisation einer elektromagnetischen Welle beschreibt die Ausrichtung des elektrischen Feldvektors bezüglich der Ausbreitungsrichtung der Welle.
-Bei Ausbreitung in z-Richtung kann so z.B. das elektrische Feld als $E(x,y,z)=a_x \hat{e_x} \sin(kz)+a_y \hat{e_y}\sin(kz-\Phi)$ beschrieben werden.
+Bei Ausbreitung in z-Richtung kann so das elektrische Feld als $E(x,y,z)=a_x \hat{e_x} \sin(kz)+a_y \hat{e_y}\sin(kz-\Phi)$ beschrieben werden.
 Bei linear polarisierten Licht
 schwingt der Feldvektor dabei ausschließlich senkrecht zur Ausbreitungsachse, es gilt $a_y=0$ oder $a_x=0$.
-Bei zirkulär polarisierten Licht gilt hingegen $a_x=a_y$, bei elliptisch polarisierten Licht können $a_x$ und $a_y$ beliebige Werte annehmen \cite[560]{gerthsen}.
+Bei zirkulär polarisierten Licht gilt $a_x=a_y$, bei elliptisch polarisierten Licht können $a_x$ und $a_y$ beliebige Werte annehmen \cite[560]{gerthsen}.
 Im aufgebauten HeNe-Laser soll linear polarisiertes Licht aus der Laserkavität ausgekoppelt werden. Dafür sind die beiden Brewsterfenster an den Enden des Entladungsrohrs eingebaut.
 Bei Durchlauf dieser Fenster wird nur die linear polarisierte Komponente transmittiert \cite[228]{Sigrist}.
 Um die Polarisation zu messen und später auch um eine optische Diode aufzubauen, wird ein Polarisator genutzt. Dies ist ein Bauteil, welches nur den Anteil des Lichts transmittiert, dessen
@@ -16,7 +16,7 @@ Polarisationsrichtung parallel zur optischen Achse verläuft. Der funktionale Zu
 	\label{eq:malus}
 	I(\alpha)= I_0 \cos(\alpha)^2
 \end{align}
-Der Winkel $\alpha$ ist hier der Verdrehwinkel zwischen optischer Achse des Polarisators und der Polarisationsrichtung des Laserstrahls und nicht der am Polarisator-Bauteil eingestellter Winkel.
+Der Winkel $\alpha$ ist hier der Winkel zwischen optischer Achse des Polarisators und der Polarisationsrichtung des Laserstrahls und nicht der am Polarisator-Bauteil eingestellter Winkel.
 
 
 \section{Durchführung \& Messung}
@@ -109,7 +109,7 @@ an den Enden der Entladungsröhre verbauten Brewsterfenster bestimmt, welche nur
 (die anderen Komponenten werden aus der optischen Achse des Aufbaus heraus abgelenkt, werden also nicht weiter als Teil des Laserstrahls transmittiert). \textcolor{blue}{factcheck notwendig hier, braucht eine CITATION}
 So entsteht theoretisch ideal linear polarisiertes Licht.
 Aufgrund von Abweichungen der Brewsterfenster von ihrer idealen Form oder Verschmutzungen auf diesen sowie
-weiteren Reflexionen des transmittierten Laserstrahls an den Spiegeln S1 und S2, die eventuell insgesamt nicht ideal polarisationserhaltend aufgebaut waren (also nicht genau in jeweils $45\%$ Winkeln zueinander und zur Einfallsachse des Strahls,
+weiteren Reflexionen des transmittierten Laserstrahls an den Spiegeln S1 und S2, die eventuell insgesamt nicht ideal polarisationserhaltend aufgebaut waren (also nicht genau in jeweils $45\%$ Winkeln zueinander und zur Einfallsachse des Strahls),
 ist es aber plausibel, dass der tatsächlich auf den Polarisator treffender Laserstrahl nicht komplett linear polarisiert war, sondern stattdessen (mit geringer Amplitude der zusätzlichen Komponente des elektrischen Felds) elliptisch polarisiert war.
 
 
