--- a/442-laser/latex/template.tex
+++ b/442-laser/latex/template.tex
@@ -81,6 +81,11 @@
 }
 
 
+\def\todo#1{
+	\textbf{\textcolor{blue}{[#1]}}
+}
+
+
 \def\ergo{\Rightarrow} %silly stuff for me
 
 \addtokomafont{chapterprefix}{\raggedleft}
