--- a/442-laser/latex/spektrum_analysator.tex
+++ b/442-laser/latex/spektrum_analysator.tex
@@ -2,6 +2,10 @@
 \section{Theorie von Moden}
 \todo{hier noch eine todo!}
 
+In optischen Resonatoren können verschiedene Lösungen für stehende Wellen, und somit stabile Oszillation, gefunden werden. Diese Lösungen haben verschiedene Frequenzen und werden Moden genannt. In unserem Fall handelt es sich um Gaußstrahlen in konfokalen- und halbsymetrischen Resonatoren.
+
+In diesem Fall werden die Moden durch drei Zahlen beschrieben - zwei transversale und eine longitudinale Modenzahl -.
+
 \section{Optischer Analysator}
 
 
